# rustysecrets-cli

./: Cargo.toml  build.rs
src/: version.rs
